--- a/gb/nsc413.md
+++ b/gb/nsc413.md
@@ -30,6 +30,7 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/19/12/29/n11752526.md#1">【2019盘点】中共在香港问题的十大谎言</a><br>
 <br><p><a href="https://github.com/ukize233/djy/blob/master/gb/nf6092.md#1">更多......</a></p>
 </td><td VALIGN=TOP width="352">
+<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781943.md#1">四川“美女市长”江建君贪腐细节曝光</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781462.md#1">电影《中国女排》引争议 前主教练要求删镜头</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781408.md#1">【独家】专访郑文杰: 被虐待至精神崩溃（三）</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781010.md#1">【拍案惊奇】伊朗导弹是元凶 德黑兰坠机记实</a><br>
@@ -41,7 +42,6 @@
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11780977.md#1">视频：乌航客机疑被伊朗导弹击中瞬间</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780832.md#1">假货太多 大陆现“山寨手机品牌排行榜”</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/9/n11780506.md#1">中南海大秘：中共高层心灰意懒 出工不出力</a><br>
-<a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11775163.md#1">中共对川普态度大变的背后</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781769.md#1">广东一商铺着火 2儿童烧死 3大人逃生</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781586.md#1">操场埋尸案二审维持原判 杜少平仍判死刑</a><br>
 <a href="https://github.com/ukize233/djy/blob/master/gb/20/1/10/n11781184.md#1">中国最大车用灯厂从大陆撤资回台建厂</a><br>
