--- a/gb/ncid277_2.md
+++ b/gb/ncid277_2.md
@@ -36,11 +36,8 @@
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772655.md#1" target="_blank">【新闻看点】习突换人 骆惠宁记者会为何颤抖</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772655.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Untitled1-1-150x120.jpg" align ="left"></a>新年伊始，中共官场爆出了第一个轰动性的消息。王志民卷铺盖走人了，骆惠宁今天（1月6日）正式出任香港中联办主任一职。对骆惠宁来说，从封疆大吏转任香港，压力应该是不小，以至于他在会见媒体时神情紧张，双腿不停颤抖。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 5:19 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11773013.md#1" target="_blank">【独家】郑文杰揭深圳联合办案中心拘港人</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11773013.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2020/01/Screen-Shot-2020-01-06-at-15.51.57-150x120.jpg" align ="left"></a>去年8月被中共当局以所谓“嫖娼”罪名拘留的29岁英国驻港使馆前雇员郑文杰，经过数月的秘密逃亡，日前在英国获得两年工作许可。他近日接受英国大纪元独家专访长达3至4小时，也是他在英国首次公开视频受访，详细描述他被“送中”所遭遇的处境。本报将逐日连载对他合共六集的访问，同时发布独家视频。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 4:13 AM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772904.md#1" target="_blank">中共加强控制国企 党员3人以上成立党支部</a><br></h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11772904.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2016/01/1407031429222639-150x120.jpg" align ="left"></a>中共中央近日印发文件，除了规定国企成立党支部、纪委，还要求国企党委书记担任董事长。根据新规定，从今以后，中共党组织研究讨论将成为公司董事会、经理层决策重大问题的前置程序。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 3:16 AM							</td></tr>
+<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/8/n11776605.md#1" target="_blank">中国传媒大学前副校长被双开 曾被指性侵女生</a><br></h3>1月8日，中国传媒大学前党委常委、副校长蔡翔因“严重违纪违法问题”被立案审查调查及被双开。其被指与他人长期保持不正当性关系。此前，蔡翔被举报性侵女学生。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月08日 4:49 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11773738.md#1" target="_blank">武汉市委书记辞去人大职务</a><br></h3>在武汉不明肺炎疫情持续扩散之际，现任中共湖北省委副书记、武汉市委书记马国强辞去武汉市人大职务，引关注。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 1:07 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/7/n11773543.md#1" target="_blank">前河南政法委书记吴天君之子获刑二年</a><br></h3>中共河南省前政法委书记吴天君在获刑两年多后，其子吴建业因受贿罪，在2019年11月7日被判处有期徒刑2年，缓刑3年，并处罚金20万元（人民币，下同）。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月07日 11:17 AM							</td></tr>
-<tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/20/1/6/n11770883.md#1" target="_blank">【翻墙必看】分析：王志民突然被撤职内幕</a><br></h3>大纪元每天为读者梳理翻墙必看的文章：
-
-1.内幕：王志民为何被撤 港共系统面临清洗
-迈入2020年，中共在港系统现第一滴血。现年62岁的中联办主任王志民突然被国务院宣布撤换，由一周前才获任命为中共人大财政经济委员会副主任委员骆惠宁接任。有学者分析，北京做法急迫、以“弹弓手”方式出牌，相当不正常，显示中共高层搏击激烈。王志民被撤换只是第一步，相信未来清洗.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2020年01月06日 10:00 PM							</td></tr>
 <tr><td><h3><a href="https://github.com/ukize233/djy/blob/master/gb/ncid277.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid277.md#1">1</a>&nbsp;&nbsp;2&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid277_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid277_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid277_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid277_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid277_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid277_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid277_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid277_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/ukize233/djy/blob/master/gb/ncid277_3.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/ukize233/djy/blob/master/gb/ncid277_2.md#1<br><a href="https://github.com/ukize233/djy/blob/master/gb/ncid277_2.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/ukize233/djy/blob/master/gb/ncid277_2.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/ncid277_2.htm">http://www.epochtimes.com/gb/ncid277_2.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
